[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/background/Blue Sphere.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/BlueSphere.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/Ring.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 32 )

[node name="BlueSphere" type="Area2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="CollisionBlue" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionRed" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="Ring" parent="." instance=ExtResource( 3 )]
visible = false

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_BlueSphere_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BlueSphere_body_exited"]
